--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
-baseurl = https://jsonplaceholder.typicode.com
-
+#baseurl = https://jsonplaceholder.typicode.com
+baseurl = http://10.144.114.255:8084
